2009-11-25  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12713: Unlink icon use garbage which is used for delete in core

2009-11-25  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12586: delete icon isn't compatible with drag&drop
	* Fixed bug: #12504: pagemodule drag'n'drop is broken when running on 4.3beta

2009-11-25  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #12752: [Safari] Bad icon positioning
	* Fixed bug #10781: Allow user function to determine childTemplate
	* Fixed bug #12753: Handle local TO processing better
	* Fixed bug #12754: "Set" button appears twice in header parts

2009-11-24  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #12721: Cannot get TO with rendertype=print when using DBAL

2009-11-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12712: Add Hook renderElement_postProcessDataValues (Thanks to Jeff Segars)

2009-11-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12589: recordlist localization doesn't return to pagemodule

2009-11-14  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #10752: Cryptic text in the mapping interface ("Custom TCE")
	* Fixed bug: #12488: Selection of Template Object in new FCE

2009-11-02  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #10983: Unserializing problems because of UTF-8
	* Fixed issue: #12266:  mod1 shows size of localprocessing two times

2009-10-19  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue #6869: $realDelete for templavoila
	* Fixed bug #10756: Bad text ("TCE-Form")

2009-10-18  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug #10754: Wrong spelling of TypoScript within labels

2009-10-11  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug #10751: Abbreviations are not allowed ("only TS")
	* Fixed bug #10775: Wrong spelling ("Data-Processing")
	* Fixed bug #11997: modifications due to deprecated funcitons in PHP 5.3
	* Fixed bug #7212: versioning-tab doesn't show up when logged in as non-admin
